# wasm-thumbnail

./: README.md
wasm-thumbnail/: Cargo.toml  wasm-thumbnail.wit
wasm-thumbnail/src/: lib.rs
