[package]
name = "wasm-thumbnail"
version = "0.1.0"
authors = ["eV <ev@7pr.xyz>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
image = { version = "0.23.10", default_features = false, features = ["gif", "jpeg", "png", "webp"] }
wit-bindgen-rust = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer", version = "0.1.0" }
